Imagens e tabelas finalizadas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=SacolasProjeto
+#spring.application.name=SacolasProjeto
+# Porta do servidor (Render define a porta através da variável PORT)
+server.port=${PORT:8080}
+
+# Configurações de Thymeleaf (opcional, mas recomendado para produção)
+spring.thymeleaf.cache=true
+spring.thymeleaf.enabled=true
